# sgs

./: .cirrus.yml  .gitignore  Cargo.toml  LICENSE.txt  README.md  board.json  build.gradle  manifest.yaml  manifest.yml  rust-toolchain.toml  system-wiki2016.json  system.json  system.ods  test-site.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/rs/tts/: Bridge.java  MainActivity.kt
app/src/main/res/values/: strings.xml
java/: Bridge.java
kotlin/: Bridge.kt  MainActivity.kt
notes/: notes.txt  system.txt
src/: app.rs  board.rs  button.rs  cli.rs  lib.rs  main.rs  obf.rs  panel.rs  parser.pest  parser.rs  speech.rs  system.rs  wasm.rs
system-export/: export_system.py  requirements.txt
vocabulary/: Pipfile  generate-system.py  process-wordfreq.py  requirements.txt  update.py  vocabulary.ods
web/: console.js  fetch-worker.js  index.html  manifest.json
