[package]
name = "sgs"
version = "0.1.0"
authors = ["Ellen Marie Dash <me@duckie.co>"]
edition = "2021"

description = "Framework for creating the software for a Speech Generating Device"
documentation = "https://doc.rs/sgs"
readme = "README.md"
# homepage = ...
repository = "https://github.com/duckinator/sgs"
license = "MIT"

keywords = ["sgs", "aac", "communication"]
categories = ["accessibility"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
nanoserde = "0.1.35"
tts = "0.25.6"

[lib]
#name = "main"
crate_type = ["cdylib", "rlib"]

# This dependency will only be included when not targeting Android
[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.23.0" }

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "=0.11.1" # Locked until https://github.com/Nercury/android_logger-rs/issues/58 is fixed
log = "0.4.17"
jni = "0.21"
eframe = { version = "0.23.0", features = ["android-native-activity"] }
# TODO: Figure out how to not need winit.
# Until then, pin to the version that egui-winit (as pulled in by eframe) needs.
winit = { version = "^0.28", default-features = false, features = ["android-native-activity"] }
